updating files location

--- a/stadiums/africa.html
+++ b/stadiums/africa.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Stadiums of Africa</title>
-    <link rel="stylesheet" href="../africa.css">
+    <link rel="stylesheet" href="/africa.css">
 </head>
 
 </html>
