--- a/stadiums/asia.html
+++ b/stadiums/asia.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Stadiums of Asia</title>
-    <link rel="stylesheet" href="../asia.css">
+    <link rel="stylesheet" href="/asia.css">
 </head>
 
 </html>
