--- a/stadiums/europe.html
+++ b/stadiums/europe.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Stadiums of Europe</title>
-    <link rel="stylesheet" href="../europe.css">
+    <link rel="stylesheet" href="/europe.css">
 </head>
 
 </html>
