--- a/stadiums/northAmerica.html
+++ b/stadiums/northAmerica.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Stadiums of North America</title>
-    <link rel="stylesheet" href="../northAmerica.css">
+    <link rel="stylesheet" href="/northAmerica.css">
 </head>
 
 </html>
