--- a/stadiums/southAmerica.html
+++ b/stadiums/southAmerica.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Stadiums of South America</title>
-    <link rel="stylesheet" href="../SouthAmerica.css">
+    <link rel="stylesheet" href="/SouthAmerica.css">
 </head>
 
 </html>
