Updated the South America html files

--- a/stadiums/southAmerica.html
+++ b/stadiums/southAmerica.html
@@ -6,4 +6,26 @@
     <link rel="stylesheet" href="/SouthAmerica.css">
 </head>
 
+<body>
+    <h1>Stadiums of the Americas</h1>
+    <div>
+        <ol>
+            <li><a href="africa.html" target="_blank">Stadiums of Africa</a></li>
+            <li><a href="asia.html" target="_blank">Stadiums of Asia</a></li>
+            <li><a href="europe.html" target="_blank">Stadiums of Europe</a></li>
+            <li><a href="northAmerica.html" target="_blank">Stadiums of North America</a></li>
+            <li><a href="oceanian.html" target="_blank">Stadiums of Oceanian</a></li>
+            <li><a href="southAmerica.html" target="_blank">Stadiums of South America</a></li>
+        </ol>
+    </div>
+    <div>
+        <ol>
+            <li>North America</li>
+            <li>Caribbean Island</li>
+            <li>Central America</li>
+            <li>South America</li>
+        </ol>
+    </div>
+</body>
+
 </html>
