A few small changes

--- a/stadiums/southAmerica.html
+++ b/stadiums/southAmerica.html
@@ -7,25 +7,32 @@
 </head>
 
 <body>
-    <h1>Stadiums of the Americas</h1>
+    <h1>Stadiums of South America</h1>
     <div>
-        <ol>
+        <ul>
             <li><a href="africa.html" target="_blank">Stadiums of Africa</a></li>
             <li><a href="asia.html" target="_blank">Stadiums of Asia</a></li>
             <li><a href="europe.html" target="_blank">Stadiums of Europe</a></li>
             <li><a href="northAmerica.html" target="_blank">Stadiums of North America</a></li>
             <li><a href="oceanian.html" target="_blank">Stadiums of Oceanian</a></li>
-            <li><a href="southAmerica.html" target="_blank">Stadiums of South America</a></li>
-        </ol>
+        </ul>
     </div>
+
     <div>
-        <ol>
-            <li>North America</li>
-            <li>Caribbean Island</li>
-            <li>Central America</li>
-            <li>South America</li>
-        </ol>
+        <ul>
+            <li>Argentina</li>
+            <li>Boliva</li>
+            <li>Brazil</li>
+            <li>Chile</li>
+            <li>Colombia</li>
+            <li>Ecuador</li>
+            <li>Paraguay</li>
+            <li>Peru</li>
+            <li>Uruguay</li>
+            <li>Venezula</li>
+        </ul>
     </div>
+
 </body>
 
 </html>
