--- a/stadiums/Stadiums.html
+++ b/stadiums/Stadiums.html
@@ -10,14 +10,18 @@
     <h1>Football Stadiums of the World</h1>
     <div>
         <ul>
-            <li><a href="africa.html" target="_blank">Stadiums of Africa</a></li>
-            <li><a href="asia.html" target="_blank">Stadiums of Asia</a></li>
-            <li><a href="europe.html" target="_blank">Stadiums of Europe</a></li>
-            <li><a href="northAmerica.html" target="_blank">Stadiums of North America</a></li>
-            <li><a href="oceanian.html" target="_blank">Stadiums of Oceanian</a></li>
-            <li><a href="southAmerica.html" target="_blank">Stadiums of South America</a></li>
+            <li><a href="../stadiums/africa/africa.html" target="_blank">Stadiums of Africa</a></li>
+            <li><a href="../stadiums/asia/asia.html" target="_blank">Stadiums of Asia</a></li>
+            <li><a href="..//stadiums/europe/europe.html" target="_blank">Stadiums of Europe</a></li>
+            <li><a href="../stadiums/northAmerica/northAmerica.html" target="_blank">Stadiums of North America</a></li>
+            <li><a href="../stadiums/oceanian/oceanian.html" target="_blank">Stadiums of Oceanian</a></li>
+            <li><a href="../stadiums/southAmerica/southAmerica.html" target="_blank">Stadiums of South America</a></li>
         </ul>
     </div>
+
+    <h2>Team - Country - Stadium</h2>
+    <p>From your favorite teams or the country you represent. 
+        See the stadiums where the greates game is played in.</p>
 
 </body>
 
