--- a/stadiums/southAmerica/colombia.html
+++ b/stadiums/southAmerica/colombia.html
@@ -6,11 +6,11 @@
     <title>Football Stadiums of the World</title>
 </head>
 <body>
-    <h1>Stadiums in Colombia</h1>
+    <h1>Colombia</h1>
 
     <h2>Quick reference of Colombia</h2>
 
-    <h3>Stadiums in Colombia</h3>
+    <h3>Stadiums</h3>
     <p>Estadio Deportivo Cali, 52,000 located in Cali opened in 2010 Club: Deportivo Cali</p>
     <p>Estadio Metropolitano Roberto Meléndez, 46,692 located in Barranquilla opened in 1986 
         Club: Junior, Colombia national football team.</p>
