--- a/stadiums/southAmerica/ecuador.html
+++ b/stadiums/southAmerica/ecuador.html
@@ -6,7 +6,7 @@
     <title>Football Stadiums of the World</title>
 </head>
 <body>
-    <h1>Stadiums in Ecuador</h1>
+    <h1>Ecuador</h1>
 
     <h2>Quick reference of Ecuador</h2>
     <p>The Republic of Ecuador is a small country in South America. It is a country that is 
@@ -16,7 +16,7 @@
         highest city in the world.
     </p>
 
-    <h3>Stadiums in Ecuador</h3>
+    <h3>Stadiums</h3>
     <p>The largest stadium in Ecuador is the Estadio Monumental Isidro Romero Carbo.
         With a capcity of 59,283 located in the city of Guayaquil and opened in the year 1987.
         Club: Barcelona Sporting Club
