--- a/stadiums/southAmerica/venezuela.html
+++ b/stadiums/southAmerica/venezuela.html
@@ -6,6 +6,94 @@
     <title>Football Stadiums of the World</title>
 </head>
 <body>
+
+    <h1>Venezuela</h1>
+
+    <h2>Quick reference of Venezuela</h2>
+
+    <h3>Stadiums</h3>
+    <table>
+        <tr>
+            <th>Stadium</th>
+            <th>Capacity</th>
+            <th>Country</th>
+            <th>City</th>
+            <th>Teams</th>
+            <th>Opening</th>
+        </tr>
+        <tr>
+            <td>Estadio Monumental de Maturín</td>
+            <td>51,796</td>
+            <td>Venezuela</td>
+            <td>Maturín</td>
+            <td>Monagas</td>
+            <td>2007</td>
+        </tr>
+        <tr>
+            <td>Estadio Metropolitano de fútbol de Lara</td>
+            <td>47,913</td>
+            <td>Venezuela</td>
+            <td>Cabudare</td>
+            <td>Deportivo Lara</td>
+            <td>2009</td>
+        </tr>
+        <tr>
+            <td>Estadio Metropolitano de Mérida</td>
+            <td>42,200</td>
+            <td>Venezuela</td>
+            <td>Mérida</td>
+            <td>Estudiantes de Merida</td>
+            <td>2007</td>
+        </tr>
+        <tr>
+            <td>Estadio Cachamay</td>
+            <td>41,600</td>
+            <td>Venezuela</td>
+            <td>Ciudad Guayana</td>
+            <td>Atlético Club Mineros de Guayana</td>
+            <td>1980</td>
+        </tr>
+        <tr>
+            <td>Estadio José Pachencho Romero</td>
+            <td>40,800</td>
+            <td>Venezuela</td>
+            <td>Maracaibo</td>
+            <td>Unión Atlético Maracaibo</td>
+            <td>1971</td>
+        </tr>
+        <tr>
+            <td>Estadio Monumental de Caracas Simón Bolivar</td>
+            <td>40,000</td>
+            <td>Venezuela</td>
+            <td>Caracas</td>
+            <td>N/A</td>
+            <td>2023</td>
+        </tr>
+        <tr>
+            <td>Estadio Polideportivo de Pueblo Nuevo</td>
+            <td>38,755</td>
+            <td>Venezuela</td>
+            <td>San Cristóbal</td>
+            <td>Deportivo Táchira Fútbol Club</td>
+            <td>1976</td>
+        </tr>
+        <tr>
+            <td>Estadio José Antonio Anzoátegui</td>
+            <td>37,485</td>
+            <td>Venezuela</td>
+            <td>Puerto la Cruz</td>
+            <td>Deportivo Anzoátegui</td>
+            <td>1965</td>
+        </tr>
+        <tr>
+            <td>Estadio La Ceiba</td>
+            <td>30,000</td>
+            <td>Venezuela</td>
+            <td>Ciudad Guayana</td>
+            <td>N/A</td>
+            <td>1998</td>
+        </tr>
+    </table>
     
 </body>
 </html>
