--- a/stadiums/southAmerica/brazil.html
+++ b/stadiums/southAmerica/brazil.html
@@ -11,6 +11,16 @@
     <h2>Quick reference of Brazil</h2>
 
     <h3>Stadiums</h3>
+    <table>
+        <tr>
+            <th>Stadium</th>
+            <th>Capacity</th>
+            <th>Country</th>
+            <th>City</th>
+            <th>Teams</th>
+            <th>Opening</th>
+        </tr>
+    </table>
     
 </body>
 </html>
