Updated South America files

--- a/stadiums/southAmerica/brazil.html
+++ b/stadiums/southAmerica/brazil.html
@@ -20,6 +20,302 @@
             <th>Teams</th>
             <th>Opening</th>
         </tr>
+        <tr>
+            <td>Estadio Jornalista Mário Filho</td>
+            <td>73,139</td>
+            <td>Brazil</td>
+            <td>Rio de Janeiro</td>
+            <td>Flamengo, Fluminense, Brazil national football team</td>
+            <td>1950</td>
+        </tr>
+        <tr>
+            <td>Estádio Nacional Mané Garrincha</td>
+            <td>72,788</td>
+            <td>Brazil</td>
+            <td>Brasília</td>
+            <td>Barzil national football team</td>
+            <td>1974</td>
+        </tr>
+        <tr>
+            <td>MorumBIS</td>
+            <td>72,039</td>
+            <td>Brazil</td>
+            <td>São Paulo</td>
+            <td>São Paulo</td>
+            <td>1960</td>
+        </tr>
+        <tr>
+            <td>Estádio Governador Plácido Castelo</td>
+            <td>57,876</td>
+            <td>Brazil</td>
+            <td>Fortaleza</td>
+            <td>Ceará, Fortaleza</td>
+            <td>1973</td>
+        </tr>
+        <tr>
+            <td>Estádio Governador Magalhães Pinto</td>
+            <td>66,558</td>
+            <td>Brazil</td>
+            <td>Belo Horizonte</td>
+            <td>Cruzeiro</td>
+            <td>1965</td>
+        </tr>
+        <tr>
+            <td>Estádio Governador Magalhães Pinto</td>
+            <td>66,558</td>
+            <td>Brazil</td>
+            <td>Belo Horizonte</td>
+            <td>Cruzeiro</td>
+            <td>1965</td>
+        </tr>
+        <tr>
+            <td>Estádio José do Rego Maciel</td>
+            <td>60,044</td>
+            <td>Brazil</td>
+            <td>Racife</td>
+            <td>Santa Cruz</td>
+            <td>1972</td>
+        </tr>
+        <tr>
+            <td>Arena do Grêmio</td>
+            <td>55,662</td>
+            <td>Brazil</td>
+            <td>Porto Alegre</td>
+            <td>Grêmio</td>
+            <td>2012</td>
+        </tr>
+        <tr>
+            <td>Estádio Estadual Jornalista Edgar Augusto Proença</td>
+            <td>53,645</td>
+            <td>Brazil</td>
+            <td>Belém</td>
+            <td>Paysandu, Remo</td>
+            <td>1978</td>
+        </tr>
+        <tr>
+            <td>Estádio Municipal João Havelange</td>
+            <td>53,350</td>
+            <td>Brazil</td>
+            <td>Uberlândia</td>
+            <td>Uberlândia</td>
+            <td>1982</td>
+        </tr>
+        <tr>
+            <td>Estádio Governador Alberto Tavares Silva</td>
+            <td>52,296</td>
+            <td>Brazil</td>
+            <td>Teresina</td>
+            <td>Flamengo do Piauí</td>
+            <td>1951</td>
+        </tr>
+        <tr>
+            <td>Estádio Beira-Rio</td>
+            <td>49,055</td>
+            <td>Brazil</td>
+            <td>Porto Alegre</td>
+            <td>Internacional</td>
+            <td>1969</td>
+        </tr>
+        <tr>
+            <td>Estádio Serra Dourada</td>
+            <td>50,049</td>
+            <td>Brazil</td>
+            <td>Goiânia</td>
+            <td>Goiás, Vila Nova</td>
+            <td>1975</td>
+        </tr>
+        <tr>
+            <td>Arena Fonte Nova</td>
+            <td>47,915</td>
+            <td>Brazil</td>
+            <td>Salvador</td>
+            <td>Bahia</td>
+            <td>1951</td>
+        </tr>
+        <tr>
+            <td>Neo Química Arena</td>
+            <td>47,252</td>
+            <td>Brazil</td>
+            <td>São Paulo</td>
+            <td>Corinthians</td>
+            <td>2014</td>
+        </tr>
+        <tr>
+            <td>Estádio Olímpico Nilton Santos</td>
+            <td>46,831</td>
+            <td>Brazil</td>
+            <td>Rio de Janeiro</td>
+            <td>Botafofo</td>
+            <td>2007</td>
+        </tr>
+        <tr>
+            <td>Estádio Governador Carlos Wilson Campos</td>
+            <td>45,440</td>
+            <td>Brazil</td>
+            <td>Recife</td>
+            <td>Brazil national football team</td>
+            <td>2013</td>
+        </tr>
+        <tr>
+            <td>Arena MRV</td>
+            <td>46,000</td>
+            <td>Brazil</td>
+            <td>Belo Horizonte</td>
+            <td>Clube Atlético Mineiro</td>
+            <td>2023</td>
+        </tr>
+        <tr>
+            <td>Estádio Paulo Constantino</td>
+            <td>45,954</td>
+            <td>Brazil</td>
+            <td>Presidente Prudente</td>
+            <td>Grêmio Prudente</td>
+            <td>1982</td>
+        </tr>
+        <tr>
+            <td>Arena da Amazônia</td>
+            <td>42,924</td>
+            <td>Brazil</td>
+            <td>Manaus</td>
+            <td>Manaus, Nacional</td>
+            <td>2014</td>
+        </tr>
+        <tr>
+            <td>Estádio Universitário Pedro Pedrossian</td>
+            <td>44,200</td>
+            <td>Brazil</td>
+            <td>Campo Grande</td>
+            <td>Operário, Comercial</td>
+            <td>1971</td>
+        </tr>
+        <tr>
+            <td>Allianz Parque</td>
+            <td>43,713</td>
+            <td>Brazil</td>
+            <td>São Paulo</td>
+            <td>Palmeiras</td>
+            <td>2014</td>
+        </tr>
+        <tr>
+            <td>Arena Pantanal</td>
+            <td>42,788</td>
+            <td>Brazil</td>
+            <td>Cuiabá</td>
+            <td>Cuiabá Esporte Clube, Mixto Esporte Clube</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>Ligga Arena</td>
+            <td>42,372</td>
+            <td>Brazil</td>
+            <td>Curitiba</td>
+            <td>Athletico Paranaense</td>
+            <td>1914</td>
+        </tr>
+        <tr>
+            <td>Estádio Couto Pereira</td>
+            <td>40,502</td>
+            <td>Brazil</td>
+            <td>Curitiba</td>
+            <td>Curitiba</td>
+            <td>1932</td>
+        </tr>
+        <tr>
+            <td>Estádio Governador João Castelo</td>
+            <td>40,149</td>
+            <td>Brazil</td>
+            <td>São Luis</td>
+            <td>Sampaio Corrēa</td>
+            <td>1982</td>
+        </tr>
+        <tr>
+            <td>Estádio Manoel Barradas</td>
+            <td>35,000</td>
+            <td>Brazil</td>
+            <td>Salvador</td>
+            <td>Vitória</td>
+            <td>1986</td>
+        </tr>
+        <tr>
+            <td>Centro Poliesportivo Pinheiro</td>
+            <td>35,000</td>
+            <td>Brazil</td>
+            <td>Curitiba</td>
+            <td>N/A</td>
+            <td>1985</td>
+        </tr>
+        <tr>
+            <td>Estádio Universitário São Paulo</td>
+            <td>35,000</td>
+            <td>Brazil</td>
+            <td>São Paulo</td>
+            <td>N/A</td>
+            <td>1961</td>
+        </tr>
+        <tr>
+            <td>Estádio Adelmar da Costa Carvalho</td>
+            <td>32,983</td>
+            <td>Brazil</td>
+            <td>Recife</td>
+            <td>Sport</td>
+            <td>1937</td>
+        </tr>
+        <tr>
+            <td>Estádio Benedito Teixeira</td>
+            <td>32,936</td>
+            <td>Brazil</td>
+            <td>São José do Rio Preto</td>
+            <td>Américo FC(SP)</td>
+            <td>1996</td>
+        </tr>
+        <tr>
+            <td>Estádio de Pituaçu</td>
+            <td>32,157</td>
+            <td>Brazil</td>
+            <td>Salvador</td>
+            <td>Galícia</td>
+            <td>1979</td>
+        </tr>
+        <tr>
+            <td>Arena das Dunas</td>
+            <td>32,050</td>
+            <td>Brazil</td>
+            <td>Natal</td>
+            <td>América FC(RN)</td>
+            <td>2014</td>
+        </tr>
+        <tr>
+            <td>Arena Barueri</td>
+            <td>31,452</td>
+            <td>Brazil</td>
+            <td>Barueri</td>
+            <td>Oeste</td>
+            <td>2007</td>
+        </tr>
+        <tr>
+            <td>Estádio Jacy Scaff</td>
+            <td>31,000</td>
+            <td>Brazil</td>
+            <td>Londrina</td>
+            <td>Londrina</td>
+            <td>1976</td>
+        </tr>
+        <tr>
+            <td>Estádio Fredis Saldívar</td>
+            <td>30,000</td>
+            <td>Brazil</td>
+            <td>Dourados</td>
+            <td>Sete de Dourados</td>
+            <td>1986</td>
+        </tr>
+        <tr>
+            <td>Estádio Mário Helênio</td>
+            <td>30,000</td>
+            <td>Brazil</td>
+            <td>Juiz de Fora</td>
+            <td>Tupi FC</td>
+            <td>1988</td>
+        </tr>
     </table>
     
 </body>
