--- a/stadiums/Stadiums.html
+++ b/stadiums/Stadiums.html
@@ -4,20 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Stadiums of the World</title>
+    <title>Stadiums of the World</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
-    <h1>Football Stadiums of the World</h1>
+    <h1>Stadiums of the World</h1>
     <div>
         <ul>
-            <li><a href="../stadiums/africa/africa.html" target="_blank">Stadiums of Africa</a></li>
-            <li><a href="../stadiums/asia/asia.html" target="_blank">Stadiums of Asia</a></li>
-            <li><a href="..//stadiums/europe/europe.html" target="_blank">Stadiums of Europe</a></li>
-            <li><a href="../stadiums/northAmerica/northAmerica.html" target="_blank">Stadiums of North America</a></li>
-            <li><a href="../stadiums/oceanian/oceanian.html" target="_blank">Stadiums of Oceanian</a></li>
-            <li><a href="../stadiums/southAmerica/southAmerica.html" target="_blank">Stadiums of South America</a></li>
+            <li><a href="Baseball/baseball.html" target="_blank">Baseball</a></li>
+            <li><a href="Basketball/basketball.html" target="_blank">BasketBall</a></li>
+            <li><a href="Football/Football.html" target="_blank">Football</a></li>
+            <li><a href="Hockey/Hockey.html" target="_blank">Hockey</a></li>
+            <li><a href="NAFootball/NAfootball.html" target="_blank">North America Football</a></li>
         </ul>
     </div>
 
