--- a/stadiums/Stadiums.html
+++ b/stadiums/Stadiums.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Stadiums of the World</h1>
-    <div>
+    <nav>
         <ul>
             <li><a href="Baseball/baseball.html" target="_blank">Baseball</a></li>
             <li><a href="Basketball/basketball.html" target="_blank">BasketBall</a></li>
@@ -18,7 +18,7 @@
             <li><a href="Hockey/Hockey.html" target="_blank">Hockey</a></li>
             <li><a href="NAFootball/NAfootball.html" target="_blank">North America Football</a></li>
         </ul>
-    </div>
+    </nav>
 
     <h2>Team - Country - Stadium</h2>
     <p>From your favorite teams or the country you represent. 
