--- a/stadiums/Stadiums.html
+++ b/stadiums/Stadiums.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Stadiums of the World</h1>
+    <h1>Stadiums</h1>
     <nav>
         <ul>
             <li><a href="Baseball/baseball.html" target="_blank">Baseball</a></li>
@@ -20,9 +20,11 @@
         </ul>
     </nav>
 
-    <h2>Team - Country - Stadium</h2>
-    <p>From your favorite teams or the country you represent. 
-        See the stadiums where the greates game is played in.</p>
+    <h2>Stadiums from different sports in different country</h2>
+
+    <p>Would you like to learn more about all the different stadiums? From the major sports to your
+        favorite teams, these stadiums are a marval of engeeniering.
+    </p>
 
 </body>
 
