--- a/stadiums/Baseball/baseball.html
+++ b/stadiums/Baseball/baseball.html
@@ -10,9 +10,44 @@
 
 <body>
     <h1>Baseball Stadiums</h1>
+    
+    <h2>Select a Baseball Team to learn more about their stadium!</h2>
+
+    <p>The MLB has 30 teams in the leauge. With twenty-nine teams located in the USA and one in Canada.</p>
 
     <nav>
-        
+        <ul>
+            <li>Arizona Diamonbacks</li>
+            <li>Atlanta Braves</li>
+            <li>Baltimore Orioles</li>
+            <li>Boston Red Sox</li>
+            <li>Chicago Cubs</li>
+            <li>Chicago White Sox</li>
+            <li>Cincinnati Reds</li>
+            <li>Cleveland Guardians</li>
+            <li>Colorado Rockies</li>
+            <li>Detroit Tigers</li>
+            <li>Huston Astro</li>
+            <li>Kansas City Royals</li>
+            <li>Los Angeles Angels</li>
+            <li>Los Angeles Dodgers</li>
+            <li>Miami Marlins</li>
+            <li>Milwaukee Brewers</li>
+            <li>Minnesota Twins</li>
+            <li>New York Mets</li>
+            <li>New York Yankees</li>
+            <li>Oakland Athletics (Moving to Los Vegas)</li>
+            <li>Philadelphia Phillies</li>
+            <li>Pittsburgh Pirates</li>
+            <li>San Diego Padres</li>
+            <li>San Francisco Giants</li>
+            <li>Seattle Mariners</li>
+            <li>St. Louis Cardinals</li>
+            <li>Tampa Bay Rays</li>
+            <li>Texas Rangers</li>
+            <li>Toronto Blue Jays</li>
+            <li>Washington Nationals</li>
+        </ul>
     </nav>
 </body>
 
