--- a/stadiums/Basketball/basketball.html
+++ b/stadiums/Basketball/basketball.html
@@ -9,7 +9,45 @@
 </head>
 
 <body>
-    
+    <h1>Basketball Stadiums</h1>
+
+    <h2>Select a basketball team</h2>
+
+    <nav>
+        <ul>
+            <li>Atlanta Hawks</li>
+            <li>Boston Celtics</li>
+            <li>Brooklyn Nets</li>
+            <li>Charlotte Hornets</li>
+            <li>Chicago Bulls</li>
+            <li>Cleveland Cavaliers</li>
+            <li>Dallas Mavericks</li>
+            <li>Denver Nuggets</li>
+            <li>Detroit Pistons</li>
+            <li>Golden State Warriors</li>
+            <li>Huston Rockets</li>
+            <li>Indiana Pacers</li>
+            <li>Los Angeles Lakers</li>
+            <li>Los Angeles Clippers</li>
+            <li>Memphis Grizzlies</li>
+            <li>Miami Heat</li>
+            <li>Milwaukee Bucks</li>
+            <li>Minnesota Timberwolves</li>
+            <li>New Orleans Pelicans</li>
+            <li>New York Knicks</li>
+            <li>Oklahoma City Thunder</li>
+            <li>Orlando Magic</li>
+            <li>Philadelphia 76ers</li>
+            <li>Phoenix Suns</li>
+            <li>Portland Trail Blazers</li>
+            <li>Sacramento Kings</li>
+            <li>San Antonio Spurs</li>
+            <li>Toronto Rapters</li>
+            <li>Utah Jazz</li>
+            <li>Washington Wizards </li>
+        </ul>
+    </nav>
+
 </body>
 
 </html>
