--- a/stadiums/Hockey/Hockey.html
+++ b/stadiums/Hockey/Hockey.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Hockey Stadiums</h1>
-    <h2></h2>
+
+    <h2>Select a hockey team</h2>
 
     <ul>
         <li>Anaheim Ducks</li>
