--- a/stadiums/NAFootball/NAfootball.html
+++ b/stadiums/NAFootball/NAfootball.html
@@ -10,7 +10,8 @@
 
     <body>
         <h1> NFL Stadiums</h1>
-        <H2></H2>
+
+        <H2>Select an NFL team</H2>
 
         <ul>
             <li>Arizona Cardinals</li>
